public class Main {
    public static void main(String[] args) {
        Window wind = new Window();
        wind.setVisible(true);
        wind.pack();
    }
}